syntax = "proto3";

service Server {
  rpc CreateUser(UserSignup) returns (stream UpdateHome) {}
  rpc Login(User) returns (stream UpdateHome) {}
  rpc Logout(User) returns (stream Empty) {}
  rpc SearchUsers(SearchPattern) returns (stream UserList) {}
  rpc DeleteAccount(User) returns (stream Empty) {}
  rpc SendMessage(Message) returns (stream UpdateHome) {}
  rpc GetUndeliveredMessages(GetMessages) returns (stream MessageList) {}
  rpc GetDeliveredMessages(GetMessages) returns (stream MessageList) {}
  rpc RefreshHome(User) returns (stream UpdateHome) {}
  rpc DeleteMessages(DeleteMessage) returns (stream UpdateHome) {}
}

message UserSignup {
  string username = 1;
  string password = 2;
}

message SearchPattern { string pattern = 1; }

message UserList { repeated string users = 1; }

message Message {
  string sender = 1;
  string receiver = 2;
  string message = 3;
}

message User { string username = 1; }

message GetMessages {
  string username = 1;
  int32 num_messages = 2;
}

message RetrievedMessage {
  int32 id = 1;
  string sender = 2;
  string message = 3;
}

message MessageList { repeated RetrievedMessage messages = 1; }

message DeleteMessage {
  string username = 1;
  string ids = 2;
}

message UpdateHome {
  string username = 1;
  int32 undeliv_messages = 2;
}

message Empty {}